Fix viewing on mobile display

--- a/style.css
+++ b/style.css
@@ -125,6 +125,9 @@ button:active {
 }
 
 @media only screen and (max-width: 600px) {
+  body {
+    height: 80vh;
+  }
   .container {
     width: 80vw;
   }
